src/mongo/db/pipeline/expression_context.h
@@ -540,6 +540,7 @@ public:
     bool allowDiskUse = false;
     bool bypassDocumentValidation = false;
     bool hasWhereClause = false;
+    bool isUpsert = false;
 
     NamespaceString ns;
 
