src/mongo/db/query/canonical_query.cpp
@@ -177,9 +177,9 @@ void CanonicalQuery::initCq(boost::intrusive_ptr<ExpressionContext> expCtx,
     _forceClassicEngine = frameworkControl == QueryFrameworkControlEnum::kForceClassicEngine;
 
     if (optimizeMatchExpression) {
+        const bool enableSimplification = !_expCtx->inLookup && !_expCtx->isUpsert;
         _primaryMatchExpression =
-            MatchExpression::normalize(std::move(parsedFind->filter),
-                                       /* enableSimplification*/ !_expCtx->inLookup);
+            MatchExpression::normalize(std::move(parsedFind->filter), enableSimplification);
     } else {
         _primaryMatchExpression = std::move(parsedFind->filter);
     }
